# gasreceiptautomation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
client/: .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: GasLogForm.tsx  LoadingScreen.tsx  LoginLanding.tsx
docker/: dev.docker-compose.yaml  dev.lubelogger.docker-compose.yml
server/: .env.example  .gitignore  Dockerfile  authconfig.py  authutils.py  main.py  proc.py  pyproject.toml
