[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.139.2",
    "openai>=2.46.0",
    "requests>=2.32.0",
    "pillow==12.*",
    "pillow-heif>=1.0.0,<2",
    "pydantic-settings==2.*",
    "pyjwt[crypto]==2.*",
    "python-dotenv>=1.2.2",
]
